--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -423,7 +423,7 @@
     });
 
     attachNavCallbacks({
-        panelClass: 'company',
+        name: 'company',
         default: 'company-stock'
     });
 
