--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -27,7 +27,34 @@
                 </div>
                 {% endif %}
             </h3>   
+            {% if part.description %}
             <p><em>{{ part.description }}</em></p>
+            {% endif %}
+            <p>
+                <div id='part-properties' class='btn-group' role='group'>
+                    {% if part.virtual %}
+                    <span class='fas fa-ghost' title='{% trans "Part is virtual (not a physical part)" %}'></span>
+                    {% endif %}
+                    {% if part.is_template %}
+                    <span class='fas fa-clone' title='{% trans "Part is a template part (variants can be made from this part)" %}'></span>
+                    {% endif %}
+                    {% if part.assembly %}
+                    <span class='fas fa-tools' title='{% trans "Part can be assembled from other parts" %}'></span>
+                    {% endif %}
+                    {% if part.component %}
+                    <span class='fas fa-th' title='{% trans "Part can be used in assemblies" %}'></span>
+                    {% endif %}
+                    {% if part.trackable %}
+                    <span class='fas fa-directions' title='{% trans "Part stock is tracked by serial number" %}'></span>
+                    {% endif %}
+                    {% if part.purchaseable %}
+                    <span class='fas fa-shopping-cart' title='{% trans "Part can be purchased from external suppliers" %}'></span>
+                    {% endif %}
+                    {% if part.salable %}
+                    <span class='fas fa-dollar-sign' title='{% trans "Part can be sold to customers" %}'></span>
+                    {% endif %}
+                </div>
+            </p>
 
             <div class='btn-group action-buttons' role='group'>
                 <button type='button' class='btn btn-default' id='toggle-starred' title='{% trans "Star this part" %}'>
@@ -97,11 +124,11 @@
             </div>
             <table class='table table-condensed'>
                 <col width='25'>
-                {% if part.IPN %}
+                {% if part.keywords %}
                 <tr>
-                    <td></td>
-                    <td>{% trans "IPN" %}</td>
-                    <td>{{ part.IPN }}</td>
+                    <td><span class='fas fa-key'></span></td>
+                    <td>{% trans "Keywords" %}</td>
+                    <td>{{ part.keywords }}</td>
                 </tr>
                 {% endif %}
                 {% if part.link %}
@@ -112,7 +139,22 @@
                 </tr>
                 {% endif %}
                 <tr>
+                    <td><span class='fas fa-calendar-alt'></span></td>
+                    <td>{% trans "Creation Date" %}</td>
+                    <td>
+                        {{ part.creation_date }}
+                        {% if part.creation_user %}
+                        <span class='badge'>{{ part.creation_user }}</span>
+                        {% endif %}
+                    </td>
                 </tr>
+                {% if part.trackable and part.getLatestSerialNumber %}
+                <tr>
+                    <td><span class='fas fa-hashtag'></span></td>
+                    <td>{% trans "Latest Serial Number" %}</td>
+                    <td>{{ part.getLatestSerialNumber }}{% include "clip.html"%}</td>
+                </tr>
+            {% endif %}
             </table>
         </div>
         </div>
@@ -196,14 +238,6 @@
             </tr>
             {% endif %}
             {% endif %}
-        {% endif %}
-        {% if part.trackable and part.getLatestSerialNumber %}
-            <tr><td colspan="3"></td></tr>
-            <tr>
-                <td><span class='fas fa-hashtag'></span></td>
-                <td>{% trans "Latest Serial Number" %}</td>
-                <td>{{ part.getLatestSerialNumber }}{% include "clip.html"%}</td>
-            </tr>
         {% endif %}
         </table>
     </div>
