Move "stock" part view

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -7,8 +7,7 @@
 {% load markdownify %}
 
 {% block menubar %}
-{% include 'order/po_navbar.html' with tab='details' %}
-
+{% include 'order/po_navbar.html' %}
 {% endblock %}
 
 {% block page_content %}
