--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -245,30 +245,7 @@
 
 </div>
 
-{% block pre_content_panel %}
-
-{% endblock %}
-
-<div class='panel panel-default panel-inventree'>
-
-
-    <div class='panel-heading'>
-        <h4>
-            {% block heading %}
-            <!-- Heading goes here -->
-            {% endblock %}
-        </h4>
-    </div>
-
-    <div class='panel-content'>
-        {% block details %}        
-        <!-- Specific part details go here... -->
-        {% endblock %}
-    </div>
-
-</div>
-{% block post_content_panel %}
-
+{% block page_content %}
 {% endblock %}
 
 {% endblock %}
