--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -7,7 +7,7 @@
 {% load markdownify %}
 
 {% block menubar %}
-{% include "order/so_navbar.html" with tab='details' %}
+{% include "order/so_navbar.html"  %}
 {% endblock %}
 
 {% block page_content %}
