--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -781,7 +781,7 @@ input[type="submit"] {
 }
 
 .sidenav .list-group-item.active {
-    background-color: #ddd;
+    background-color: #bbab8b;
     border-color: #ccc;
 }
 
