Return all part parameters to the main part edit form
- refactor purchaseorder view
- refactor salesorder view

--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -781,7 +781,7 @@ input[type="submit"] {
 }
 
 .sidenav .list-group-item.active {
-    background-color: #bbab8b;
+    background-color: #b3a997;
     border-color: #ccc;
 }
 
