--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -44,6 +44,48 @@
     </div>
 </div>
 
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-purchase-orders'>
+    <div class='panel-heading'>
+        <h4>{% trans "Purchase Orders" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='po-button-bar'>
+            <div class='button-toolbar container-fluid' style='float: right;'>
+                <button class='btn btn-primary' type='button' id='part-order2' title='{% trans "Order part" %}'>
+                    <span class='fas fa-shopping-cart'></span> {% trans "Order Part" %}
+                </button>
+                <div class='filter-list' id='filter-list-purchaseorder'>
+                    <!-- An empty div in which the filter list will be constructed -->
+                </div>
+            </div>
+        </div>
+        
+        <table class='table table-striped table-condensed po-table' id='purchase-order-table' data-toolbar='#po-button-bar'>
+        </table>   
+    </div>
+</div>
+
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-sales-orders'>
+    <div class='panel-heading'>
+        <h4>{% trans "Sales Orders" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='so-button-bar'>
+            <div class='button-toolbar container-fluid' style='float: right;'>
+                {% if 0 %}
+                <button class='btn btn-primary' type='button' id='part-order2' title='{% trans "New sales order" %}'>{% trans "New Order" %}</button>
+                {% endif %}
+                <div class='filter-list' id='filter-list-salesorder'>
+                    <!-- An empty div in which the filter list will be constructed -->
+                </div>
+            </div>
+        </div>
+
+        <table class='table table-striped table-condensed po-table' id='sales-order-table' data-toolbar='#so-button-bar'>
+        </table>
+    </div>
+</div>
+
 <div class='panel panel-default panel-inventree panel-hidden' id='panel-part-notes'>
     <div class='panel-heading'>
         <div class='row'>
@@ -100,6 +142,29 @@
 
 {% block js_ready %}
     {{ block.super }}
+
+    loadPurchaseOrderTable($("#purchase-order-table"), {
+        url: "{% url 'api-po-list' %}",
+        params: {
+            part: {{ part.id }},
+        },
+    });
+    
+    $("#part-order2").click(function() {
+        launchModalForm("{% url 'order-parts' %}", {
+            data: {
+                part: {{ part.id }},
+            },
+            reload: true,
+        });
+    });
+
+    loadSalesOrderTable($("#sales-order-table"), {
+        url: "{% url 'api-so-list' %}",
+        params: {
+            part: {{ part.id }},
+        },
+    });
 
     loadPartTestTemplateTable(
         $("#test-template-table"),
