--- a/InvenTree/company/templates/company/supplier_part_base.html
+++ b/InvenTree/company/templates/company/supplier_part_base.html
@@ -61,7 +61,7 @@ src="{% static 'img/blank_image.png' %}"
             <td>{% trans "Internal Part" %}</td>
             <td>
                 {% if part.part %}
-                <a href="{% url 'part-suppliers' part.part.id %}">{{ part.part.full_name }}</a>{% include "clip.html"%}
+                <a href="{% url 'part-detail' part.part.id %}?display=part-suppliers">{{ part.part.full_name }}</a>{% include "clip.html"%}
                 {% endif %}
             </td>
         </tr>
