--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -134,6 +134,54 @@
     </div>
 </div>
 
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-part-suppliers'>
+    <div class='panel-heading'>
+        <h4>{% trans "Part Suppliers" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='supplier-button-toolbar'>
+            <div class='btn-group'>
+                <button class="btn btn-success" id='supplier-create'>
+                    <span class='fas fa-plus-circle'></span> {% trans "New Supplier Part" %}
+                </button>
+                <div id='opt-dropdown' class="btn-group">
+                    <button id='supplier-part-options' class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{% trans "Options" %}<span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href='#' id='supplier-part-delete' title='{% trans "Delete supplier parts" %}'>{% trans "Delete" %}</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
+        <table class="table table-striped table-condensed" id='supplier-table' data-toolbar='#supplier-button-toolbar'>
+        </table>
+    </div>
+</div>
+
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-part-manufacturers'>
+    <div class='panel-heading'>
+        <h4>{% trans "Part Manufacturers" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div class='panel-content'>
+            <div id='manufacturer-button-toolbar'>
+                <div class='btn-group'>
+                    <button class="btn btn-success" id='manufacturer-create'>
+                        <span class='fas fa-plus-circle'></span> {% trans "New Manufacturer Part" %}
+                    </button>
+                    <div id='opt-dropdown' class="btn-group">
+                        <button id='manufacturer-part-options' class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{% trans "Options" %}<span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href='#' id='manufacturer-part-delete' title='{% trans "Delete manufacturer parts" %}'>{% trans "Delete" %}</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <table class='table table-condensed table-striped' id='manufacturer-table' data-toolbar='#manufacturer-button-toolbar'></table>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 
 {% block js_load %}
@@ -424,6 +472,108 @@
     attachNavCallbacks({
         name: 'part',
         default: 'part-stock'
+    });
+
+    $('#supplier-create').click(function () {
+        launchModalForm(
+            "{% url 'supplier-part-create' %}",
+            {
+                reload: true,
+                data: {
+                    part: {{ part.id }}
+                },
+                secondary: [
+                    {
+                        field: 'supplier',
+                        label: '{% trans "New Supplier" %}',
+                        title: '{% trans "Create new supplier" %}',
+                    },
+                    {
+                        field: 'manufacturer',
+                        label: '{% trans "New Manufacturer" %}',
+                        title: '{% trans "Create new manufacturer" %}',
+                    }
+                ]
+            });
+    });
+
+    $("#supplier-part-delete").click(function() {
+
+        var selections = $("#supplier-table").bootstrapTable("getSelections");
+
+        var parts = [];
+
+        selections.forEach(function(item) {
+            parts.push(item.pk);
+        });
+
+        launchModalForm("{% url 'supplier-part-delete' %}", {
+            data: {
+                parts: parts,
+            },
+            reload: true,
+        });
+    });
+
+    loadSupplierPartTable(
+        "#supplier-table",
+        "{% url 'api-supplier-part-list' %}",
+        {
+            params: {
+                part: {{ part.id }},
+                part_detail: false,
+                supplier_detail: true,
+                manufacturer_detail: true,
+            },
+        }
+    );
+
+    linkButtonsToSelection($("#supplier-table"), ['#supplier-part-options']);
+
+    loadManufacturerPartTable(
+        '#manufacturer-table',
+        "{% url 'api-manufacturer-part-list' %}",
+        {
+            params: {
+                part: {{ part.id }},
+                part_detail: true,
+                manufacturer_detail: true,
+            },
+        }
+    );
+
+    linkButtonsToSelection($("#manufacturer-table"), ['#manufacturer-part-options']);
+
+    $("#manufacturer-part-delete").click(function() {
+
+        var selections = $("#manufacturer-table").bootstrapTable("getSelections");
+
+        deleteManufacturerParts(selections, {
+            onSuccess: function() { 
+                $("#manufacturer-table").bootstrapTable("refresh");
+            }
+        });
+    });
+
+    $('#manufacturer-create').click(function () {
+
+        constructForm('{% url "api-manufacturer-part-list" %}', {
+            fields: {
+                part: {
+                    value: {{ part.pk }},
+                    hidden: true,
+                },
+                manufacturer: {},
+                MPN: {},
+                description: {},
+                link: {},
+            },
+            method: 'POST',
+            title: '{% trans "Add Manufacturer Part" %}',
+            onSuccess: function() { 
+                $("#manufacturer-table").bootstrapTable("refresh");
+            }
+        });
     });
 
 {% endblock %}
