--- a/InvenTree/company/templates/company/manufacturer_part_detail.html
+++ b/InvenTree/company/templates/company/manufacturer_part_detail.html
@@ -18,11 +18,11 @@
         <td>{% trans "Internal Part" %}</td>
         <td>
             {% if part.part %}
-            <a href="{% url 'part-suppliers' part.part.id %}">{{ part.part.full_name }}</a>
+            <a href="{% url 'part-detail' part.part.id %}?display=part-manufacturers">{{ part.part.full_name }}</a>
             {% endif %}
         </td>
     </tr>
-    <tr><td>{% trans "Manufacturer" %}</td><td><a href="{% url 'company-detail-manufacturer-parts' part.manufacturer.id %}">{{ part.manufacturer.name }}</a></td></tr>
+    <tr><td>{% trans "Manufacturer" %}</td><td><a href="{% url 'company-detail' part.manufacturer.id %}?display=supplier-parts">{{ part.manufacturer.name }}</a></td></tr>
     <tr><td>{% trans "MPN" %}</td><td>{{ part.MPN }}</tr></tr>
 {% if part.link %}
     <tr><td>{% trans "External Link" %}</td><td><a href="{{ part.link }}">{{ part.link }}</a></td></tr>
