--- a/InvenTree/company/templates/company/supplier_part_base.html
+++ b/InvenTree/company/templates/company/supplier_part_base.html
@@ -82,7 +82,7 @@ src="{% static 'img/blank_image.png' %}"
         <tr>
             <td><span class='fas fa-building'></span></td>
             <td>{% trans "Supplier" %}</td>
-            <td><a href="{% url 'company-detail-supplier-parts' part.supplier.id %}">{{ part.supplier.name }}</a>{% include "clip.html"%}</td></tr>
+            <td><a href="{% url 'company-detail' part.supplier.id %}">{{ part.supplier.name }}</a>{% include "clip.html"%}</td></tr>
         <tr>
             <td><span class='fas fa-hashtag'></span></td>
             <td>{% trans "SKU" %}</td>
@@ -92,7 +92,7 @@ src="{% static 'img/blank_image.png' %}"
         <tr>
             <td><span class='fas fa-industry'></span></td>
             <td>{% trans "Manufacturer" %}</td>
-            <td><a href="{% url 'company-detail-manufacturer-parts' part.manufacturer_part.manufacturer.id %}">
+            <td><a href="{% url 'company-detail' part.manufacturer_part.manufacturer.id %}">
             {{ part.manufacturer_part.manufacturer.name }}</a>{% include "clip.html"%}</td>
         </tr>
         {% endif %}
@@ -153,7 +153,7 @@ $('#delete-part').click(function() {
     launchModalForm(
         "{% url 'supplier-part-delete' %}?part={{ part.id }}",
         {
-            redirect: "{% url 'company-detail-supplier-parts' part.supplier.id %}"
+            redirect: "{% url 'company-detail' part.supplier.id %}"
         }
     );
 });
