--- a/InvenTree/company/templates/company/supplier_part_detail.html
+++ b/InvenTree/company/templates/company/supplier_part_detail.html
@@ -22,7 +22,7 @@
             {% endif %}
         </td>
     </tr>
-    <tr><td>{% trans "Supplier" %}</td><td><a href="{% url 'company-detail-supplier-parts' part.supplier.id %}">{{ part.supplier.name }}</a></td></tr>
+    <tr><td>{% trans "Supplier" %}</td><td><a href="{% url 'company-detail' part.supplier.id %}">{{ part.supplier.name }}</a></td></tr>
     <tr><td>{% trans "SKU" %}</td><td>{{ part.SKU }}</tr></tr>
 {% if part.link %}
     <tr><td>{% trans "External Link" %}</td><td><a href="{{ part.link }}">{{ part.link }}</a></td></tr>
