Refactor variants page

--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -19,7 +19,7 @@
     </li>
     {% if part.is_template %}
     <li class='list-group-item' title='{% trans "Part Variants" %}'>
-        <a href='#' id='select-part-variants' class='nav-toggle'>
+        <a href='#' id='select-variants' class='nav-toggle'>
             <span class='menu-tab-icon fas fa-shapes sidebar-icon'></span>
             {% trans "Variants" %}
         </a>
