--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -107,6 +107,31 @@
     </div>
 </div>
 
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-variants'>
+    <div class='panel-heading'>
+        <h4>{% trans "Part Variants" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='variant-button-toolbar'>
+            <div class='button-toolbar container-fluid'>
+                <div class='btn-group' role='group'>
+                    {% if part.is_template and part.active %}
+                    <button class='btn btn-success' id='new-variant' title='{% trans "Create new variant" %}'>
+                        <span class='fas fa-plus-circle'></span> {% trans "New Variant" %}
+                    </button>
+                    {% endif %}
+                </div>
+                <div class='filter-list' id='filter-list-variants'>
+                    <!-- Empty div (will be filled out with available BOM filters) -->
+                </div>
+            </div>
+        </div>
+        
+        <table class='table table-striped table-condensed' id='variants-table' data-toolbar='#variant-button-toolbar'>
+        </table>
+    </div>
+</div>
+
 <div class='panel panel-default panel-inventree panel-hidden' id='panel-part-parameters'>
     <div class='panel-heading'>
         <h4>{% trans "Parameters" %}</h4>
@@ -190,6 +215,17 @@
 
 {% block js_ready %}
     {{ block.super }}
+
+    loadPartVariantTable($('#variants-table'), {{ part.pk }});
+
+    $('#new-variant').click(function() {
+        launchModalForm(
+            "{% url 'make-part-variant' part.id %}",
+            {
+                follow: true,
+            }
+        );
+    });
 
     loadPurchaseOrderTable($("#purchase-order-table"), {
         url: "{% url 'api-po-list' %}",
