--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -229,6 +229,29 @@
     </div>
 </div>
 
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-build-orders'>
+    <div class='panel-heading'>
+        <h4>{% trans "Part Builds" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='build-button-toolbar'>
+            <div class='button-toolbar container-fluid' style='float: right';>
+                {% if part.active %}
+                {% if roles.build.add %}
+                <button class="btn btn-success" id='start-build'><span class='fas fa-tools'></span> {% trans "Start New Build" %}</button>
+                {% endif %}
+                {% endif %}
+                <div class='filter-list' id='filter-list-build'>
+                    <!-- Empty div for filters -->
+                </div>
+            </div>
+        </div>
+        
+        <table class='table table-striped table-condensed' data-toolbar='#build-button-toolbar' id='build-table'>
+        </table>
+    </div>
+</div>
+
 <div class='panel panel-default panel-inventree panel-hidden' id='panel-part-manufacturers'>
     <div class='panel-heading'>
         <h4>{% trans "Part Manufacturers" %}</h4>
@@ -261,6 +284,19 @@
 
 {% block js_ready %}
     {{ block.super }}
+
+    $("#start-build").click(function() {
+        newBuildOrder({
+            part: {{ part.pk }},
+        });
+    });
+
+    loadBuildTable($("#build-table"), {
+        url: "{% url 'api-build-list' %}",
+        params: {
+            part: {{ part.id }},
+        }
+    });
 
     $('#table-related-part').inventreeTable({
     });
