Refactor BOM page

--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -41,7 +41,7 @@
     {% endif %}
     {% if part.assembly %}
     <li class='list-group-item' title='{% trans "Bill of Materials" %}'>
-        <a href='#' id='select-part-bom' class='nav-toggle'>
+        <a href='#' id='select-bom' class='nav-toggle'>
             <span class='menu-tab-icon fas fa-list sidebar-icon'></span>
             {% trans "Bill of Materials" %}
         </a>
