--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -229,6 +229,15 @@
     </div>
 </div>
 
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-bom'>
+    <div class='panel-heading'>
+        <h4>{% trans "Bill of Materials" %}</h4>
+    </div>
+    <div class='panel-content'>
+        {% include "part/bom.html" with part=part %}
+    </div>
+</div>
+
 <div class='panel panel-default panel-inventree panel-hidden' id='panel-build-orders'>
     <div class='panel-heading'>
         <h4>{% trans "Part Builds" %}</h4>
@@ -284,6 +293,124 @@
 
 {% block js_ready %}
     {{ block.super }}
+
+    // Load the BOM table data
+    loadBomTable($("#bom-table"), {
+        editable: {{ editing_enabled }},
+        bom_url: "{% url 'api-bom-list' %}",
+        part_url: "{% url 'api-part-list' %}",
+        parent_id: {{ part.id }} ,
+        sub_part_detail: true,
+    });
+
+    linkButtonsToSelection($("#bom-table"),
+        [
+            "#bom-item-delete",
+        ]
+    );
+
+    {% if editing_enabled %}
+    $("#editing-finished").click(function() {
+        location.href = "{% url 'part-detail' part.id %}?display=bom";
+    });
+
+    $('#bom-item-delete').click(function() {
+
+        // Get a list of the selected BOM items
+        var rows = $("#bom-table").bootstrapTable('getSelections');
+
+        // TODO - In the future, display (in the dialog) which items are going to be deleted
+
+        showQuestionDialog(
+            '{% trans "Delete selected BOM items?" %}',
+            '{% trans "All selected BOM items will be deleted" %}',
+            {
+                accept: function() {
+
+                    // Keep track of each DELETE request
+                    var requests = [];
+
+                    rows.forEach(function(row) {
+                        requests.push(
+                            inventreeDelete(
+                                `/api/bom/${row.pk}/`,
+                            )
+                        );
+                    });
+
+                    // Wait for *all* the requests to complete
+                    $.when.apply($, requests).then(function() {
+                        location.reload();
+                    });
+                }
+            }
+        );
+    });
+
+    $('#bom-upload').click(function() {
+        location.href = "{% url 'upload-bom' part.id %}";
+    });
+
+    $('#bom-duplicate').click(function() {
+        launchModalForm(
+            "{% url 'duplicate-bom' part.id %}",
+            {
+                success: function() {
+                    $('#bom-table').bootstrapTable('refresh');
+                }
+            }
+        );
+    });
+
+    $("#bom-item-new").click(function () {
+        launchModalForm(
+            "{% url 'bom-item-create' %}?parent={{ part.id }}",
+            {
+                success: function() {
+                    $("#bom-table").bootstrapTable('refresh');
+                },
+                secondary: [
+                    {
+                        field: 'sub_part',
+                        label: '{% trans "New Part" %}',
+                        title: '{% trans "Create New Part" %}',
+                        url: "{% url 'part-create' %}",
+                    },
+                ]
+            }
+        );
+    });
+
+    {% else %}
+
+    $("#validate-bom").click(function() {
+        launchModalForm(
+            "{% url 'bom-validate' part.id %}",
+            {
+                reload: true,
+            }
+        );
+    });
+
+    $("#edit-bom").click(function () {
+        location.href = "{% url 'part-detail' part.id %}?display=bom&edit=1";
+    });
+
+    $("#download-bom").click(function () {
+        launchModalForm("{% url 'bom-export' part.id %}",
+            {
+                success: function(response) {
+                    location.href = response.url;
+                },
+            }
+        );
+    });
+
+    {% endif %}
+
+    $("#print-bom-report").click(function() {
+        printBomReports([{{ part.pk }}]);
+    });
 
     $("#start-build").click(function() {
         newBuildOrder({
