Refactor allocation page(s)
- Also perform null check on notes before displaying

--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -179,7 +179,9 @@
         </div>
     </div>
     <div class='panel-content'>
+        {% if company.notes %}
         {{ company.notes | markdownify }}
+        {% endif %}
     </div>
 </div>
 
