--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -65,7 +65,9 @@
         </div>
     </div>
     <div class='panel-content'>
+        {% if order.notes %}
         {{ order.notes | markdownify }}
+        {% endif %}
     </div>
 </div>
 
