--- a/InvenTree/stock/templates/stock/location.html
+++ b/InvenTree/stock/templates/stock/location.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block menubar %}
-{% include "stock/location_navbar.html" with tab="stock" %}
+{% include "stock/location_navbar.html" %}
 {% endblock %}
 
 {% block content %}
@@ -143,11 +143,37 @@
 
 {% block location_content %}
 
-<div class='panel panel-default panel-inventree'>
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-stock'>
     <div class='panel-heading'>
         <h4>{% trans "Stock Items" %}</h4>
     </div>
     {% include "stock_table.html" %}
+</div>
+
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-sublocations'>
+    <div class='panel-heading'>
+        <h4>{% trans "Sublocations" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='sublocation-button-toolbar'>
+            <div class='button-toolbar container-fluid' style='float: right;'>
+                <!-- Printing actions menu -->
+                <div class='btn-group'>
+                    <button id='location-print-options' class='btn btn-primary dropdown-toggle' type='button' data-toggle="dropdown" title='{% trans "Printing Actions" %}'>
+                        <span class='fas fa-print'></span> <span class='caret'></span>
+                    </button>
+                    <ul class='dropdown-menu'>
+                        <li><a href='#' id='multi-location-print-label' title='{% trans "Print labels" %}'><span class='fas fa-tags'></span> {% trans "Print labels" %}</a></li>
+                    </ul>
+                </div>
+                <div class='filter-list' id='filter-list-location'>
+                    <!-- An empty div in which the filter list will be constructed -->
+                </div>
+            </div>
+        </div>
+    
+        <table class='table table-striped table-condensed' data-toolbar='#sublocation-button-toolbar' id='sublocation-table'></table>
+    </div>
 </div>
 
 {% endblock %}
@@ -162,6 +188,36 @@
     enableNavbar({
         label: 'location',
         toggleId: '#location-menu-toggle'
+    });
+
+    loadStockLocationTable($('#sublocation-table'), {
+        params: {
+            {% if location %}
+            parent: {{ location.pk }},
+            {% else %}
+            parent: 'null',
+            {% endif %}
+        }
+    });
+    
+    linkButtonsToSelection(
+        $('#sublocation-table'),
+        [
+            '#location-print-options',
+        ]
+    );
+    
+    $('#multi-location-print-label').click(function() {
+    
+        var selections = $('#sublocation-table').bootstrapTable('getSelections');
+    
+        var locations = [];
+    
+        selections.forEach(function(loc) {
+            locations.push(loc.pk);
+        });
+    
+        printStockLocationLabels(locations);
     });
 
     {% if location %}
@@ -301,4 +357,10 @@
         },
         url: "{% url 'api-stock-list' %}",
     });
+
+    attachNavCallbacks({
+        name: 'stocklocation',
+        default: 'stock'
+    });
+
 {% endblock %}
