--- a/InvenTree/templates/stock_table.html
+++ b/InvenTree/templates/stock_table.html
@@ -8,7 +8,7 @@
     {% authorized_owners location.owner as owners %}
 {% endif %}
 
-<div id='button-toolbar'>
+<div id='{{ prefix }}button-toolbar'>
     <div class='button-toolbar container-fluid' style='float: right;'>
         <div class='btn-group'>
             <button class='btn btn-default' id='stock-export' title='{% trans "Export Stock Information" %}'>
@@ -74,5 +74,5 @@
     </div>
 </div>
 
-<table class='table table-striped table-condensed' data-toolbar='#button-toolbar' id='stock-table'>
+<table class='table table-striped table-condensed' data-toolbar='#{{ prefix }}button-toolbar' id='{{ prefix }}stock-table'>
 </table>
