--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -56,7 +56,7 @@
     </li>
     {% endif %}
     <li class='list-group-item' title='{% trans "Pricing Information" %}'>
-        <a href='#' id='select-part-pricing' class='nav-toggle'>
+        <a href='#' id='select-pricing' class='nav-toggle'>
             <span class='menu-tab-icon fas fa-dollar-sign sidebar-icon'></span>
             {% trans "Prices" %}
         </a>
