Fix purchase order import form

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -77,6 +77,11 @@
 
 {{ block.super }}
 
+    enableNavbar({
+        label: 'po',
+        toggleId: '#po-menu-toggle',
+    });
+
     $('#edit-notes').click(function() {
         constructForm('{% url "api-po-detail" order.pk %}', {
             fields: {
