--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -335,6 +335,12 @@
 {% block js_ready %}
     {{ block.super }}
 
+    enableNavbar({
+        label: 'part',
+        toggleId: '#part-menu-toggle',
+    });
+
+
     loadBuildOrderAllocationTable("#build-order-allocation-table", {
         params: {
             part: {{ part.id }},
