--- a/InvenTree/part/templates/part/import_wizard/part_upload.html
+++ b/InvenTree/part/templates/part/import_wizard/part_upload.html
@@ -1,13 +1,9 @@
-{% extends "part/category.html" %}
+{% extends "base.html" %}
 {% load inventree_extras %}
 {% load i18n %}
 {% load static %}
 
-{% block menubar %}
-{% include 'part/category_navbar.html' with tab='import' %}
-{% endblock %}
-
-{% block category_content %}
+{% block content %}
     <div class='panel panel-default panel-inventree'>
         <div class='panel-heading'>
             <h4>
