Fixes for issues with new SPA approach
- Fix manufacturer part table
- Fix supplier part table
- Consolidate manufacturer and supplier parts onto single page
- CSS fixes

--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -781,8 +781,8 @@ input[type="submit"] {
 }
 
 .sidenav .list-group-item.active {
-    background-color: #b3a997;
-    border-color: #ccc;
+    background-color: #c6d4ea;
+    border: 2px #aab solid;
 }
 
 /* The side navigation menu */
