--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -223,30 +223,6 @@
     </div>
 </div>
 
-<div class='panel panel-default panel-inventree panel-hidden' id='panel-part-suppliers'>
-    <div class='panel-heading'>
-        <h4>{% trans "Part Suppliers" %}</h4>
-    </div>
-    <div class='panel-content'>
-        <div id='supplier-button-toolbar'>
-            <div class='btn-group'>
-                <button class="btn btn-success" id='supplier-create'>
-                    <span class='fas fa-plus-circle'></span> {% trans "New Supplier Part" %}
-                </button>
-                <div id='opt-dropdown' class="btn-group">
-                    <button id='supplier-part-options' class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{% trans "Options" %}<span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                        <li><a href='#' id='supplier-part-delete' title='{% trans "Delete supplier parts" %}'>{% trans "Delete" %}</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        
-        <table class="table table-striped table-condensed" id='supplier-table' data-toolbar='#supplier-button-toolbar'>
-        </table>
-    </div>
-</div>
-
 <div class='panel panel-default panel-inventree panel-hidden' id='panel-bom'>
     <div class='panel-heading'>
         <h4>{% trans "Bill of Materials" %}</h4>
@@ -302,7 +278,29 @@
     </div>
 </div>
 
-<div class='panel panel-default panel-inventree panel-hidden' id='panel-part-manufacturers'>
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-suppliers'>
+    <div class='panel-heading'>
+        <h4>{% trans "Part Suppliers" %}</h4>
+    </div>
+    <div class='panel-content'>
+        <div id='supplier-button-toolbar'>
+            <div class='btn-group'>
+                <button class="btn btn-success" id='supplier-create'>
+                    <span class='fas fa-plus-circle'></span> {% trans "New Supplier Part" %}
+                </button>
+                <div id='opt-dropdown' class="btn-group">
+                    <button id='supplier-part-options' class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{% trans "Options" %}<span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href='#' id='supplier-part-delete' title='{% trans "Delete supplier parts" %}'>{% trans "Delete" %}</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
+        <table class="table table-striped table-condensed" id='supplier-part-table' data-toolbar='#supplier-button-toolbar'>
+        </table>
+    </div>
+
     <div class='panel-heading'>
         <h4>{% trans "Part Manufacturers" %}</h4>
     </div>
@@ -321,7 +319,7 @@
                     </div>
                 </div>
             </div>
-            <table class='table table-condensed table-striped' id='manufacturer-table' data-toolbar='#manufacturer-button-toolbar'></table>
+            <table class='table table-condensed table-striped' id='manufacturer-part-table' data-toolbar='#manufacturer-button-toolbar'></table>
         </div>
     </div>
 </div>
@@ -828,7 +826,7 @@
 
     $("#supplier-part-delete").click(function() {
 
-        var selections = $("#supplier-table").bootstrapTable("getSelections");
+        var selections = $("#supplier-part-table").bootstrapTable("getSelections");
 
         var parts = [];
 
@@ -845,7 +843,7 @@
     });
 
     loadSupplierPartTable(
-        "#supplier-table",
+        "#supplier-part-table",
         "{% url 'api-supplier-part-list' %}",
         {
             params: {
@@ -857,10 +855,10 @@
         }
     );
 
-    linkButtonsToSelection($("#supplier-table"), ['#supplier-part-options']);
+    linkButtonsToSelection($("#supplier-part-table"), ['#supplier-part-options']);
 
     loadManufacturerPartTable(
-        '#manufacturer-table',
+        '#manufacturer-part-table',
         "{% url 'api-manufacturer-part-list' %}",
         {
             params: {
@@ -871,15 +869,15 @@
         }
     );
 
-    linkButtonsToSelection($("#manufacturer-table"), ['#manufacturer-part-options']);
+    linkButtonsToSelection($("#manufacturer-part-table"), ['#manufacturer-part-options']);
 
     $("#manufacturer-part-delete").click(function() {
 
-        var selections = $("#manufacturer-table").bootstrapTable("getSelections");
+        var selections = $("#manufacturer-part-table").bootstrapTable("getSelections");
 
         deleteManufacturerParts(selections, {
             onSuccess: function() { 
-                $("#manufacturer-table").bootstrapTable("refresh");
+                $("#manufacturer-part-table").bootstrapTable("refresh");
             }
         });
     });
@@ -900,7 +898,7 @@
             method: 'POST',
             title: '{% trans "Add Manufacturer Part" %}',
             onSuccess: function() { 
-                $("#manufacturer-table").bootstrapTable("refresh");
+                $("#manufacturer-part-table").bootstrapTable("refresh");
             }
         });
     });
