--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -63,15 +63,9 @@
     </li>
     {% if part.purchaseable and roles.purchase_order.view %}
     <li class='list-group-item' title='{% trans "Suppliers" %}'>
-        <a href='#' id='select-part-suppliers' class='nav-toggle'>
+        <a href='#' id='select-suppliers' class='nav-toggle'>
             <span class='menu-tab-icon fas fa-building sidebar-icon'></span>
             {% trans "Suppliers" %}
-        </a>
-    </li>
-    <li class='list-group-item' title='{% trans "Manufacturers" %}'>
-        <a href='#' id='select-part-manufacturers' class='nav-toggle'>
-            <span class='menu-tab-icon fas fa-tools sidebar-icon'></span>
-            {% trans "Manufacturers" %}
         </a>
     </li>
     <li class='list-group-item' title='{% trans "Purchase Orders" %}'>
